# MyWebServer

./: .gitignore  CMakeLists.txt  HttpConnectionManager.cpp  HttpConnectionManager.h  HttpHandler.cpp  HttpHandler.h  MyClient.cpp  MyServer.cpp  MyServer.h  README.md  client.cpp  main.cpp
doc/: 压力测试.md  浏览器长短连接实验.md  遇到的问题.md
src/: CMakeLists.txt
src/header/: Acceptor.h  Buffer.h  Channel.h  ConnectionManager.h  Epoll.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  IHolder.h  IUser.h  SocketUtils.h  TcpConnection.h  TcpServer.h  Timer.h  socket_utils.h
src/source/: Acceptor.cpp  Buffer.cpp  Channel.cpp  ConnectionManager.cpp  Epoll.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  SocketUtils.cpp  TcpConnection.cpp  TcpServer.cpp  Timer.cpp  socket_utils.cpp
tests/: CMakeLists.txt  MyClient.cpp  TestEventLoop.cpp  TestEventLoopThread.cpp  TestEventLoopThreadPool.cpp  TestTcpClient.cpp  TestTcpServer.cpp  TestTimer.cpp
websource/: index.html  index_bk.html
